tcp: fix compilation of IPv4-only builds

PR:			256538
Reported by:		iron.udjin@gmail.com
Sponsored by:		Netflix, Inc.

(cherry picked from commit 224cf7b35b9bbe8d075f6004249d850c620b7855)